hphp/hack/test/typecheck/like_types/dynamic_coercion/decl_types/tapply_typedef.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

function dyn(): dynamic { return 4; }

type X = int;
newtype Y = int;

function f(): X {
  return dyn(); // error
}

function g(): Y {
  return dyn(); // error
}
